--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -12,13 +12,51 @@ html(lang="ru")
 		
 		//=======убрать перевод цифр в номер телефона на ios  и safari ======
 		meta(name="format-detection" content="telephone=no")
-		
-		
 		link(rel="stylesheet", href="css/main.css")
 		title !{title}
-		
+		style.
+			@font-face {
+				font-family: 'Inter';
+				src: url(./fonts/Inter-Regular.woff2) format("woff2");
+				font-weight: 400;
+				font-style: normal;
+				font-display: swap;
+			}
+			@font-face {
+				font-family: 'Inter';
+				src: url(./fonts/Inter-Medium.woff2) format("woff2");
+				font-weight: 500;
+				font-style: normal;
+				font-display: swap;
+			}
+			@font-face {
+				font-family: 'Inter';
+				src: url(./fonts/Inter-SemiBold.woff2) format("woff2");
+				font-weight: 600;
+				font-style: normal;
+				font-display: swap;
+			}
+			@font-face {
+				font-family: 'Inter';
+				src: url(./fonts/Inter-Bold.woff2) format("woff2");
+				font-weight: 700;
+				font-style: normal;
+				font-display: swap;
+			}			
+			@font-face {
+				font-family: 'Suisse Intl';
+				src: url(./fonts/suisse-intl-regular.woff2) format("woff2");
+				font-style: normal;
+				font-display: swap;
+			}
+			@font-face {
+				font-family: 'Roboto Serif';
+				src: url(./fonts/RobotoSerif_SemiExpanded-Medium.woff2) format("woff2");
+				font-style: normal;
+				font-display: swap;
+			}		
 	body(class=(bodyCl !=="" ? bodyCl : ''))
-		#overlay
+		
 		block content
 		
 		//=============== jquery ===================
