--- a/src/scss/base/_var.scss
+++ b/src/scss/base/_var.scss
@@ -6,5 +6,6 @@ $accent: #93AB42;
 $red: #E3000F;
 $white: #ffffff;
 
-$reg: 'Roboto Regular';
-$rm: 'Roboto Medium';
+$reg: 'Inter';
+$roboto: 'Roboto Serif';
+$suisse: 'Suisse Intl';
