--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -23,6 +23,9 @@ body {
 	color: $text;
 	font-family: $reg;
 	font-size: 16px;
+	line-height: 1.5;
+	font-weight: 400;
+	letter-spacing: -0.02em;
 	-webkit-font-smoothing: antialiased;
 }
 
