--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -12,7 +12,8 @@ html(lang="ru")
 		
 		//=======убрать перевод цифр в номер телефона на ios  и safari ======
 		meta(name="format-detection" content="telephone=no")
-		link(rel="stylesheet", href="css/main.css")
+		link(rel="stylesheet", href="./css/main.css")
+		
 		title !{title}
 		style.
 			@font-face {
@@ -58,6 +59,7 @@ html(lang="ru")
 	body(class=(bodyCl !=="" ? bodyCl : ''))
 		
 		block content
+			
 		
 		//=============== jquery ===================
 		script(src="./libs/jquery/jquery-3.0.0.min.js")
