--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,4 +1,24 @@
-
+:root {
+	--error: #ff2313;
+	--fill-icon: #222;
+	--grey-line: #e1e1e1;
+	--logo-red: #e3000f;
+	--link: #1a60b4;
+	--style: #fff;
+	--text-white: #fff;
+	--text-black: #222;
+	--text-grey-text: #929292;
+	--text-grey-text-imput: #b2b2b2;
+	--button-black-button: #222;
+	--button-hover-black-button: #313131;
+	--button-grey-default-button: #e0e0e0;
+	--button-add-color-green: #93ab42;
+	--imput-imput-gray: #f8f8f8;
+	--imput-imput-white: #fff;
+	--bg-bg-grey: #f6f6f6;
+	--bg-bg-blue: #fff;
+	--bg-bg-white: #fff;
+}
 
 *, *:after, *:before {
 	box-sizing: border-box;
@@ -20,7 +40,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;
-	color: $text;
+	color: var(--text-black);
 	font-family: $reg;
 	font-size: 16px;
 	line-height: 1.5;
