--- a/src/pug/ui/icons.pug
+++ b/src/pug/ui/icons.pug
@@ -24,22 +24,111 @@ html(lang="ru")
 					ul
 						li.dark-bg
 							a(href="#!").logo-white
-								+svg-icon('logo')
+								+svg-icon-ui('logo')
 						pre.
 							a(href="#!").logo-white
 								+svg-icon('logo')
 						li
 							a(href="#!").logo
-								+svg-icon('logo')
+								+svg-icon-ui('logo')
 							pre.
 								a(href="#!").logo
 									+svg-icon('logo')
 						li
-							svg.svg-close
-								use()
+							+svg-icon-ui('bar')
 							pre.
-								svg.svg-close
-									use()
-								
-					
-					
+								+svg-icon('bar')
+						li
+							+svg-icon-ui('check')
+							pre.
+								+svg-icon('check')
+						li
+							+svg-icon-ui('check')(class="check--big")
+							pre.
+								+svg-icon('check')(class="check--big")
+						li
+							+svg-icon-ui('chevron-down')
+							pre.
+								+svg-icon('chevron-down')
+						li
+							+svg-icon-ui('chevron-up')
+							pre.
+								+svg-icon('chevron-up')
+						li
+							+svg-icon-ui('chevron-left')
+							pre.
+								+svg-icon('chevron-left')
+						li
+							+svg-icon-ui('chevron-right')
+							pre.
+								+svg-icon('chevron-right')
+						li
+							+svg-icon-ui('close')
+							pre.
+								+svg-icon('close')
+						li
+							+svg-icon-ui('eye')
+							pre.
+								+svg-icon('eye')
+						li
+							+svg-icon-ui('eye-close')
+							pre.
+								+svg-icon('eye-close')
+						li
+							+svg-icon-ui('fleur')
+							pre.
+								+svg-icon('fleur')
+						li
+							+svg-icon-ui('dry')
+							pre.
+								+svg-icon('dry')
+						li
+							+svg-icon-ui('hand-wash')
+							pre.
+								+svg-icon('hand-wash')
+						li
+							+svg-icon-ui('info')
+							pre.
+								+svg-icon('info')
+						li
+							+svg-icon-ui('iron')
+							pre.
+								+svg-icon('iron')
+						li
+							+svg-icon-ui('machine-drying')
+							pre.
+								+svg-icon('machine-drying')
+						li
+							+svg-icon-ui('not-bleach')
+							pre.
+								+svg-icon('not-bleach')
+						li
+							+svg-icon-ui('paper')
+							pre.
+								+svg-icon('paper')
+
+						li
+							+svg-icon-ui('pin')
+							pre.
+								+svg-icon('pin')
+						li
+							+svg-icon-ui('plus')
+							pre.
+								+svg-icon('plus')
+						li
+							+svg-icon-ui('search')
+							pre.
+								+svg-icon('search')
+						li
+							+svg-icon-ui('video')
+							pre.
+								+svg-icon('video')
+
+						li
+							+svg-icon-ui('')
+							pre.
+								+svg-icon('')
+						li
+							+svg-icon-ui('')
+							pre.
+								+svg-icon('')
