--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -13,6 +13,7 @@
 	--button-hover-black-button: #313131;
 	--button-grey-default-button: #e0e0e0;
 	--button-add-color-green: #93ab42;
+	--accent: #93ab42;
 	--imput-imput-gray: #f8f8f8;
 	--imput-imput-white: #fff;
 	--bg-bg-grey: #f6f6f6;
