--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -8,3 +8,28 @@
 	width: 398px;
 	height: 80px;
 }
+.svg-bar, .svg-check{
+	color: var(--fill-icon);
+}
+.svg-bar, .svg-check, .svg-chevron-down,.svg-chevron-up, .svg-chevron-left, .svg-chevron-right,.svg-close, .svg-dry, .svg-eye, .svg-eye-close, .svg-info, .svg-minus, .svg-paper, .svg-pin, .svg-plus, .svg-search, .svg-video{
+	fill: transparent;
+	width: 24px;
+	height: 24px;
+	color: var(--fill-icon);
+}
+.svg-fleur{
+	width: 26px;
+	height: 24px;
+	color: var(--fill-icon);
+}
+
+.svg-check.check--big{
+	width: 80px;
+	height: 80px;
+	color: var(--accent);
+}
+.svg-hand-wash, .svg-iron, .svg-machine-drying,.svg-not-bleach{
+	width: 24px;
+	height: 24px;
+	fill: transparent;
+}
