--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -45,8 +45,8 @@ html(lang="ru")
 				font-display: swap;
 			}			
 			@font-face {
-				font-family: 'Suisse Intl';
-				src: url(./fonts/suisse-intl-regular.woff2) format("woff2");
+				font-family: 'SuisseIntl-Regular';
+				src: url(./fonts/SuisseIntl-Regular.woff2) format("woff2");
 				font-style: normal;
 				font-display: swap;
 			}
