--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -11,6 +11,7 @@ html(lang="ru")
 		//====убрать синий цвет у ссылок в сафари ========
 		meta(name="format-detection" content="telephone=no")
 		link(rel="stylesheet", href="../css/main.css")
+
 		title UI-KIT
 		style.
 			@font-face {
@@ -62,6 +63,22 @@ html(lang="ru")
 				h2 Форма
 
 				.container-dashboard__content
+					h3 Custom select
+					div.dark-bg(style="padding:30px;")
+						.form-item
+							.dropdown
+								button.dropdown__button 
+									span Выбрать город
+								.dropdown__list
+									ul
+										li.dropdown__list-item(data-value="Пример заполнения 1") Пример заполнения 1
+										li.dropdown__list-item(data-value="Пример заполнения 2") Пример заполнения 2
+										li.dropdown__list-item(data-value="Пример заполнения 3") Пример заполнения 3
+										li.dropdown__list-item(data-value="Пример заполнения 4") Пример заполнения 4
+								//==== в этот скрытый инпут в качестве value  выводится значение из data-value у.dropdown__list-item ===
+								input.dropdown__input-hidden(type="text", name="select-category")
+							
+					hr
 					div.dark-bg(style="padding:30px;")
 						.form-item
 							label Введите логин
@@ -118,3 +135,10 @@ html(lang="ru")
 									span.input-icon
 										+svg-icon('eye')
 									input.error(type="text" name="name" placeholder="Пример заполнения")
+		//=============== jquery ===================
+		script(src="../libs/jquery/jquery-3.0.0.min.js")
+		
+				
+		//=============== мои скрипты ===================
+		
+		script(src="../js/main.js")
