--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -12,7 +12,7 @@ select:-webkit-autofill:focus {
    box-shadow: 0 0 0px 1000px #fff inset;
 }
 input,
-textarea {
+textarea, select {
   width: 100%;
   display: block;
   color: var(--text-black);
@@ -21,14 +21,14 @@ textarea {
   &::placeholder {
     font-family: inherit;
     font-size: inherit;
-    color: var(--text-grey-text-imput);
+    color: var(--text-grey-input);
     opacity: .6;
   }
 }
 .form-item{
   position: relative;
   
-  input, textarea{
+  input, textarea, select{
     height: 64px;
     padding-inline: 16px;
     background-color: var(--style);
@@ -119,4 +119,84 @@ textarea {
       }
     }
   }
+}
+/*custom select*/
+.dropdown {
+  position: relative;
+}
+
+.dropdown__button {
+  position: relative;
+  display: block;
+  width: 100%;
+  text-align: left;
+
+  background: var(--style);
+  border: 1px solid var(--style);
+  height: 64px;
+
+  padding-left: 16px;
+  padding-right: 35px;
+  font-size: 18px;
+  cursor: pointer;
+  span{
+    color: var(--text-grey-input);
+    opacity: .6;
+  }
+}
+
+.dropdown__button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  width: 24px;
+  height: 24px;
+  display: block;
+  z-index: 2;
+  transform: translateY(-50%);
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M18 9L12 15L6 9' stroke='%23222222' stroke-linecap='round' /%3e%3c/svg%3e");
+  transition: .3s; 
+  /* Снимаем клик с треугольника */
+  pointer-events: none;
+}
+.dropdown__button.dropdown__button--active:after{
+  transform: translateY(-50%) rotate(180deg);
+}
+
+.dropdown__list {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 72px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  background: #FFFFFF;
+  overflow: hidden;
+  width: 100%;
+  z-index: 1;
+  ul{
+    margin-block:10px;
+  }
+}
+
+.dropdown__list--visible {
+  display: block;
+  box-shadow: 0 12px 32px 0 rgba(0, 0, 0, 0.16);
+}
+
+.dropdown__list-item {
+  margin: 0;
+  padding: 0;
+  border-bottom: 0px;
+  padding: 4px 16px;
+  line-height: 1.5;
+  transition: .3s; 
+  cursor: pointer;
+  &:hover{color: var(--text-grey);}
+}
+
+.dropdown__input-hidden {
+  display: none;
 }
