--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -176,8 +176,28 @@ textarea, select {
   overflow: hidden;
   width: 100%;
   z-index: 1;
+  
   ul{
-    margin-block:10px;
+    margin-block:10px; 
+    max-height: 340px;
+    overflow: hidden;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--text-grey-input) white;
+    &::-webkit-scrollbar{
+      display: block;
+      width: 3px;
+      border-radius: 5px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--text-grey-input);
+      width: 3px;
+      border-radius: 5px;
+    }
+    &::-webkit-scrollbar-track {
+      background-color:white;
+      border-radius: 5px;
+    }
   }
 }
 
