--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -66,6 +66,7 @@ html(lang="ru")
 					h3 Custom select
 					div.dark-bg(style="padding:30px;")
 						.form-item
+							label Название поля
 							.dropdown
 								button.dropdown__button 
 									span Выбрать город
@@ -75,14 +76,7 @@ html(lang="ru")
 										li.dropdown__list-item(data-value="Пример заполнения 2") Пример заполнения 2
 										li.dropdown__list-item(data-value="Пример заполнения 3") Пример заполнения 3
 										li.dropdown__list-item(data-value="Пример заполнения 4") Пример заполнения 4
-										li.dropdown__list-item(data-value="Пример заполнения 1") Пример заполнения 1
-										li.dropdown__list-item(data-value="Пример заполнения 2") Пример заполнения 2
-										li.dropdown__list-item(data-value="Пример заполнения 3") Пример заполнения 3
-										li.dropdown__list-item(data-value="Пример заполнения 4") Пример заполнения 4
-										li.dropdown__list-item(data-value="Пример заполнения 1") Пример заполнения 1
-										li.dropdown__list-item(data-value="Пример заполнения 2") Пример заполнения 2
-										li.dropdown__list-item(data-value="Пример заполнения 3") Пример заполнения 3
-										li.dropdown__list-item(data-value="Пример заполнения 4") Пример заполнения 4
+
 								//==== в этот скрытый инпут в качестве value  выводится значение из data-value у.dropdown__list-item ===
 								input.dropdown__input-hidden(type="text", name="select-category")
 							
