--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,9 @@
 @import "base/_var";
 @import "base/_base";
+// @import "base/_scroll";
 @import "base/_typography.scss";
 @import "base/_icons.scss";
+@import "blocks/_buttons.scss";
 @import "blocks/_form.scss";
 
 
