--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -9,11 +9,12 @@
 	--text-black: #222;
 	--text-grey: #929292;
 	--text-grey-input: #b2b2b2;
-	--button-black-button: #222;
+	// --button-black: #222;
 	--button-hover: #313131;
-	--black-button: #313131;
-	--button-grey-default-button: #e0e0e0;
-	--button-add-color-green: #93ab42;
+	--black-button: #222222;
+	--button-disabled: #e0e0e0;
+	--button-accent: #93ab42;
+	--button-accent-hover:#a9bc68;
 	--accent: #93ab42;
 	--imput-imput-gray: #f8f8f8;
 	--imput-imput-white: #fff;
@@ -113,55 +114,4 @@ input[type="submit"] {
 	appearance: none;
 	-moz-appearance: none;
 	-webkit-appearance: none;
-}
-.ss-wrapper {
-	overflow: hidden;
-	width: 100%;
-	height: 100%;
-	position: relative;
-	z-index: 1;
-	float: left;
-}
-
-.ss-content {
-	height: 100%;
-	width: calc(100% + 18px);
-	padding: 0 0 0 0;
-	position: relative;
-	overflow: auto;
-	box-sizing: border-box;
-}
-
-.ss-content.rtl {
-	width: calc(100% + 18px);
-	right: auto;
-}
-
-.ss-scroll {
-	position: relative;
-	background: rgba(0, 0, 0, 0.1);
-	width: 9px;
-	border-radius: 4px;
-	top: 0;
-	z-index: 2;
-	cursor: pointer;
-	opacity: 0;
-	transition: opacity 0.25s linear;
-}
-
-.ss-hidden {
-	display: none;
-}
-
-.ss-container:hover .ss-scroll,
-.ss-container:active .ss-scroll {
-	opacity: 1;
-}
-
-.ss-grabbed {
-	-o-user-select: none;
-	-ms-user-select: none;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	user-select: none;
 }
