--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,9 +6,10 @@ block content
 		.start-page__cards
 			a(href="../ui/colors.html") UI-KIT PAGE
 			
-			//- a(href="about.html")
-			//- 	span О нас
-				
+			a(href="main.html")
+				span Главная
+			a(href="preloader.html")
+				span Загрузка				
 			//- a(href="#!")
 			//- 	span Отдельная страница
 			//- a(href="#!")
