--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,4 +1,6 @@
 :root {
+	--bg-blue:#2e394d;
+	--white: #ffffff;
 	--error: #ff2313;
 	--fill-icon: #222;
 	--grey-line: #e1e1e1;
@@ -21,6 +23,9 @@
 	--bg-bg-grey: #f6f6f6;
 	--bg-bg-blue: #fff;
 	--bg-bg-white: #fff;
+
+	--preloaderHideDelay: 5s;
+	--preloaderFillDuration:3s;
 }
 
 *, *:after, *:before {
@@ -114,4 +119,20 @@ input[type="submit"] {
 	appearance: none;
 	-moz-appearance: none;
 	-webkit-appearance: none;
+}
+.page-wrapper{
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	&>*{width: 100%;}
+	&>.header, &>.footer{
+		flex-shrink: 0;
+	}
+	&>main{flex-grow: 1;}
+}
+.header-container{
+	width: 100%;
+	max-width: 1920px;
+	padding-inline: 24px;
+	margin-inline: auto;
 }
