--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,11 +3,13 @@
 // @import "base/_scroll";
 @import "base/_typography.scss";
 @import "base/_icons.scss";
+
+@import "blocks/_preloader.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_form.scss";
 
 
-//blocks
- 
+ @import "sections/_header.scss";
+ @import "sections/_footer.scss";
   //ui
  @import "ui/_ui-navigation";
