--- a/src/scss/blocks/_preloader.scss
+++ b/src/scss/blocks/_preloader.scss
@@ -9,6 +9,18 @@
 	animation-duration: .3s;
 	animation-fill-mode: forwards;
 	animation-timing-function: ease-in-out;
+	.svg-logo {
+		color: var(--white);
+		width: 420px;
+		height: 90px;
+	}
+	@media (max-width: 767px) {
+	row-gap: 40px;
+	.svg-logo{
+		width: 219px;
+		height: 46px;
+	}
+	}
 }
 .preloader-line{
 	width: 256px;
@@ -16,6 +28,10 @@
 	border-radius: 8px;
 	position: relative;
 	background: rgba(255,255,255, .2);
+	@media (max-width: 767px) {
+	width: 128px;
+	height: 4px;
+	}
 	span{
 		position: absolute;
 		top: -1px;
