--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 
 
  @import "sections/_header.scss";
+ @import "sections/_main-hero.scss";
  @import "sections/_footer.scss";
   //ui
  @import "ui/_ui-navigation";
