--- a/src/scss/blocks/_preloader.scss
+++ b/src/scss/blocks/_preloader.scss
@@ -9,6 +9,15 @@
 	animation-duration: .3s;
 	animation-fill-mode: forwards;
 	animation-timing-function: ease-in-out;
+	padding-bottom: 24px;
+	color: var(--style);
+	&-bottom{
+		position: absolute;
+		bottom: 24px;
+		left: 50%;
+		transform: translateX(-50%);
+
+	}
 	.svg-logo {
 		color: var(--white);
 		width: 420px;
