--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,5 +1,6 @@
 //====== HEADER=====
 header.header
+	include ../blocks/_header-search
 	.header-container
 		//===LOGO====
 		a(href="#!").logo.logo--white
@@ -10,14 +11,14 @@ header.header
 				ul.menu-list.flx-center
 					li.menu-list-item 
 						a(href="#!") Для мужчин
-						ul.menu-list-child.bx
+						ul.menu-list-child.bx-sh
 							li
 								a(href="#!") Коллекция Мужcкая Весна 2024
 							li
 								a(href="#!") Коллекция Мужcкая Лето 2024
 					li.menu-list-item 
 						a(href="#!") Для женщин
-						ul.menu-list-child.bx
+						ul.menu-list-child.bx-sh
 							li
 								a(href="#!") Коллекция Женская Весна 2024
 							li
