--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,8 @@
 @import "blocks/_preloader.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_form.scss";
+@import "blocks/_header-search.scss";
+
 
 
  @import "sections/_header.scss";
