--- a/src/pug/blocks/_header-search.pug
+++ b/src/pug/blocks/_header-search.pug
@@ -1,2 +1,12 @@
 //==== HEADER SEARCH BLOCK ====
 .header-search-wrapper.bx-sh
+	.container
+		.row
+			.col-3
+				h1 text
+			.col-3
+				h1 text
+			.col-3
+				h1 text
+			.col-3
+				h1 text
