--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -136,3 +136,10 @@ input[type="submit"] {
 	padding-inline: 24px;
 	margin-inline: auto;
 }
+.container{
+	width: 100%;
+	max-width: 1896px;
+	margin-inline: auto;
+
+}
+
