--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "base/_var";
 @import "base/_base";
+@import "base/_grid";
 // @import "base/_scroll";
 @import "base/_typography.scss";
 @import "base/_icons.scss";
